[tool.poetry]
name = "aws-lambda-emit-heartbeat-metric"
version = "0.0.1"
description = "Simply emits a metric that goes between 0 and 1 every 2 minutes. Used as a heartbeat to test alerting."
authors = ["MDTP Telemetry"]
readme = "README.md"

[[tool.poetry.source]]
name = "artifactory"
url = "https://artefacts.tax.service.gov.uk/artifactory/api/pypi/pips/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.10"
datetime = "^5.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"
bandit = "^1.7.8"
pre-commit = "^3.7.0"
cookiecutter = "^2.6.0"
version-incrementor = "^1.10.0"
cruft = "^2.15.0"
coverage = "^7.4.4"
black = "^24.4.2"
mypy-extensions = "^1.0.0"
pathspec = "^0.12.1"
platformdirs = "^4.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
